# Complete-Physics-Framework

./: CMakeLists.txt  README.md  build_config.json  build_engine.py
framework parameters/: global_parameters.hpp  hydro_parameters.hpp
framework parameters/compile time flags/: base_flags.hpp  flags.hpp  force_flags.hpp  gravity_flags.hpp  hydro_flags.hpp  integrator_flags.hpp
initial_conditions/: iniconds_generator.cpp  iniconds_generator.hpp
misc/: custom_allocator.cpp  custom_allocator.hpp
particles/: base_particles.hpp  gravity_particles.hpp  particle_wrapper.hpp  particles.hpp
simulation/physics/forces/hydrodynamics/: sph.hpp
simulation/physics/integrator/: integrator.hpp
src/framework parameters/compile time flags/: core_flags.hpp  flags.hpp  integrator_flags.hpp
src/particles/: base_particles.cpp  base_particles.hpp  hydro_particles.hpp  particles.hpp
